package behavioral.observer.streamdata_ca1;

public interface MyStreamListener<T>{
    void listen(T t);
}
